--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -1,3 +1,4 @@
+# configs/x86_64-clean.config
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
@@ -41,7 +42,6 @@ CONFIG_PACKAGE_resolveip=y
 # ------------------------------------------------------------
 # Firewall / nftables stack (fw4)
 # ------------------------------------------------------------
-CONFIG_PACKAGE_nftables=y
 CONFIG_PACKAGE_iptables-nft=y
 
 # ------------------------------------------------------------
@@ -68,10 +68,15 @@ CONFIG_PACKAGE_kmod-ipt-nat=y
 CONFIG_PACKAGE_kmod-ipt-tproxy=y
 
 # ------------------------------------------------------------
-# Passwall2 Runtime Dependencies (Offline-friendly base)
+# Passwall2 Offline-ready base (no UI included)
+# These satisfy luci-app-passwall2 dependency resolution offline.
 # ------------------------------------------------------------
+CONFIG_PACKAGE_tcping=y
+CONFIG_PACKAGE_geoview=y
+CONFIG_PACKAGE_v2ray-geoip=y
+CONFIG_PACKAGE_v2ray-geosite=y
 
-# Common libraries (required by multiple proxy components)
+# Common runtime libs (avoid later missing libs)
 CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libsodium=y
 CONFIG_PACKAGE_libudns=y
@@ -80,19 +85,12 @@ CONFIG_PACKAGE_libudns=y
 CONFIG_PACKAGE_kmod-inet-diag=y
 CONFIG_PACKAGE_kmod-netlink-diag=y
 
-# Utilities pulled by luci-app-passwall2 on install (avoid online fetch)
+# Utilities pulled by luci-app-passwall2
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_libuci-lua=y
 
-# Common engines (recommended; not strictly required for UI installation)
+# Common engines
 CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_sing-box=y
-
-# ------------------------------------------------------------
-# NOTE:
-# Do not force ipset / kmod-ipt-ipset here.
-# Official OpenWrt 24.10.x repos may not provide a compatible ipset chain.
-# Third-party proxy stacks should rely on nftables where possible.
-# ------------------------------------------------------------
