--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,6 @@ jobs:
           sudo chmod 600 "$SWAP_PATH"
           sudo mkswap "$SWAP_PATH"
           sudo swapon "$SWAP_PATH"
-
           sudo swapon --show
           free -h
 
@@ -87,13 +86,13 @@ jobs:
           git clone --depth=1 --branch "${OWRT_TAG}" "${OWRT_REPO}" openwrt
           : > openwrt/build.log
 
-      - name: Add Passwall packages feed (for offline-ready base)
+      - name: Add Passwall packages feed (for offline Passwall2 deps)
         shell: bash
         run: |
           set -euo pipefail
           cd openwrt
+          # Provide tcping/geoview/v2ray-geoip/v2ray-geosite as buildable packages
           echo "src-git passwall_packages https://github.com/Openwrt-Passwall/openwrt-passwall-packages.git;main" >> feeds.conf.default
-          tail -n 20 feeds.conf.default | tee -a build.log
 
       - name: Add extra packages (Argon theme sources)
         shell: bash
@@ -101,6 +100,7 @@ jobs:
           set -euo pipefail
           cd openwrt
 
+          # Argon theme source into buildroot
           mkdir -p package/extra
           rm -rf package/extra/luci-theme-argon || true
           git clone --depth=1 https://github.com/jerrykuku/luci-theme-argon.git package/extra/luci-theme-argon 2>&1 | tee -a build.log
@@ -135,15 +135,15 @@ jobs:
             "CONFIG_PACKAGE_kmod-nft-socket"
             "CONFIG_PACKAGE_kmod-nft-compat"
             "CONFIG_PACKAGE_kmod-tun"
+            "CONFIG_PACKAGE_libev"
+            "CONFIG_PACKAGE_libsodium"
+            "CONFIG_PACKAGE_libudns"
             "CONFIG_PACKAGE_kmod-inet-diag"
             "CONFIG_PACKAGE_kmod-netlink-diag"
             "CONFIG_PACKAGE_coreutils"
             "CONFIG_PACKAGE_coreutils-base64"
             "CONFIG_PACKAGE_coreutils-nohup"
             "CONFIG_PACKAGE_libuci-lua"
-            "CONFIG_PACKAGE_libev"
-            "CONFIG_PACKAGE_libsodium"
-            "CONFIG_PACKAGE_libudns"
             "CONFIG_PACKAGE_tcping"
             "CONFIG_PACKAGE_geoview"
             "CONFIG_PACKAGE_v2ray-geoip"
@@ -154,7 +154,6 @@ jobs:
 
           OPTIONAL_Y=(
             "CONFIG_PACKAGE_luci-theme-argon"
-            "CONFIG_PACKAGE_nftables"
           )
 
           missing=0
@@ -244,11 +243,10 @@ jobs:
             Profile: Clean Edition
 
             Notes:
-            - Default LuCI theme is Bootstrap (stock-like).
-            - Argon theme is included as an optional theme (not default).
-            - Offline-ready base for installing Passwall2 UI from a local IPK:
-              tcping, geoview, v2ray-geoip, v2ray-geosite, xray-core, sing-box,
-              and common runtime libs are preinstalled.
+            - Argon theme is included but the default UI remains Bootstrap (stock-like).
+            - This build is Passwall2-ready for offline environments:
+              includes tcping/geoview/v2ray-geoip/v2ray-geosite and common runtime deps.
+              Users can upload luci-app-passwall2.ipk locally without relying on remote opkg feeds.
 
             Recommended:
             - squashfs-uefi for UEFI systems
