--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -1,4 +1,3 @@
-# configs/x86_64-clean.config
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
@@ -12,6 +11,7 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-ssl=y
 CONFIG_PACKAGE_luci-compat=y
+CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-argon=y
 
 # ------------------------------------------------------------
@@ -61,36 +61,35 @@ CONFIG_PACKAGE_kmod-nft-tproxy=y
 
 # ------------------------------------------------------------
 # Kernel: iptables compatibility (legacy scripts)
-# Keep minimal; deps will be pulled automatically if needed.
 # ------------------------------------------------------------
 CONFIG_PACKAGE_kmod-ipt-core=y
 CONFIG_PACKAGE_kmod-ipt-nat=y
 CONFIG_PACKAGE_kmod-ipt-tproxy=y
 
 # ------------------------------------------------------------
-# Passwall2 Offline-ready base (no UI included)
-# These satisfy luci-app-passwall2 dependency resolution offline.
+# Passwall2 Offline Installation "Must-Haves"
+# (So luci-app-passwall2.ipk can be uploaded & installed offline)
 # ------------------------------------------------------------
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_geoview=y
 CONFIG_PACKAGE_v2ray-geoip=y
 CONFIG_PACKAGE_v2ray-geosite=y
 
-# Common runtime libs (avoid later missing libs)
+# ------------------------------------------------------------
+# Passwall2 Runtime Dependencies (Offline-friendly base)
+# ------------------------------------------------------------
 CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libsodium=y
 CONFIG_PACKAGE_libudns=y
 
-# Kernel diag modules (required by sing-box)
 CONFIG_PACKAGE_kmod-inet-diag=y
 CONFIG_PACKAGE_kmod-netlink-diag=y
 
-# Utilities pulled by luci-app-passwall2
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_libuci-lua=y
 
-# Common engines
+# Common engines (optional but recommended)
 CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_sing-box=y
