--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -1,95 +1,129 @@
-CONFIG_TARGET_x86=y
-CONFIG_TARGET_x86_64=y
-CONFIG_TARGET_x86_64_DEVICE_generic=y
+#!/usr/bin/env bash
+set -euo pipefail
 
-CONFIG_TARGET_IMAGES_GZIP=y
-CONFIG_TARGET_ROOTFS_PARTSIZE=1024
+# ============================================================
+# HarryWrt DIY Script (OpenWrt 24.10.5 / Clean)
+# - Branding (banner/motd/DISTRIB_DESCRIPTION)
+# - Default LuCI theme forced to Bootstrap (Argon remains optional)
+# - Fix geoview build: allow Go toolchain auto-download (Go >= 1.24)
+# ============================================================
 
-# ------------------------------------------------------------
-# LuCI (Clean base UI)
-# ------------------------------------------------------------
-CONFIG_PACKAGE_luci=y
-CONFIG_PACKAGE_luci-ssl=y
-CONFIG_PACKAGE_luci-compat=y
-CONFIG_PACKAGE_luci-theme-bootstrap=y
-CONFIG_PACKAGE_luci-theme-argon=y
+FILES_DIR="files"
 
-# ------------------------------------------------------------
-# Tools & Libraries
-# ------------------------------------------------------------
-CONFIG_PACKAGE_bash=y
-CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_wget-ssl=y
-CONFIG_PACKAGE_unzip=y
-CONFIG_PACKAGE_htop=y
-CONFIG_PACKAGE_libstdcpp=y
+mkdir -p "${FILES_DIR}/etc/config"
+mkdir -p "${FILES_DIR}/etc/uci-defaults"
 
 # ------------------------------------------------------------
-# Base security
+# 0) Build-time fix: geoview requires Go >= 1.24
+#    OpenWrt 24.10.x ships Go 1.23.x and locks GOTOOLCHAIN=local
+#    Patch to GOTOOLCHAIN=auto so Go can fetch the needed toolchain.
+#    MUST run before make defconfig / compilation.
 # ------------------------------------------------------------
-CONFIG_PACKAGE_ca-bundle=y
-CONFIG_PACKAGE_openssl-util=y
+echo "[patch] enabling Go toolchain auto-download (GOTOOLCHAIN=auto) for geoview..."
+
+# 0.1 patch golang-build.sh
+if [ -f "feeds/packages/lang/golang/golang-build.sh" ]; then
+  sed -i 's/GOTOOLCHAIN=local/GOTOOLCHAIN=auto/g' "feeds/packages/lang/golang/golang-build.sh"
+else
+  # fallback for different feeds layout
+  find "feeds/packages/lang/golang" -name "golang-build.sh" -exec sed -i 's/GOTOOLCHAIN=local/GOTOOLCHAIN=auto/g' {} + || true
+fi
+
+# 0.2 patch golang-package.mk (double insurance)
+if [ -f "feeds/packages/lang/golang/golang-package.mk" ]; then
+  sed -i 's/^GOTOOLCHAIN:=local$/GOTOOLCHAIN:=auto/g' "feeds/packages/lang/golang/golang-package.mk" || true
+fi
+
+# 0.3 sanity check: fail fast if still locked
+if grep -RIn "GOTOOLCHAIN=local" "feeds/packages/lang/golang" >/dev/null 2>&1; then
+  echo "ERROR: still found GOTOOLCHAIN=local after patch (geoview will fail)" >&2
+  grep -RIn "GOTOOLCHAIN=local" "feeds/packages/lang/golang" | head -n 30 >&2 || true
+  exit 1
+fi
+
+echo "[patch] Go toolchain policy patched OK."
 
 # ------------------------------------------------------------
-# Network utilities
+# 1) System defaults (hostname, timezone)
 # ------------------------------------------------------------
-CONFIG_PACKAGE_ip-full=y
-CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_tcpdump=y
-CONFIG_PACKAGE_ethtool=y
-CONFIG_PACKAGE_resolveip=y
+cat > "${FILES_DIR}/etc/config/system" <<'EOF'
+config system
+  option hostname 'HarryWrt'
+  option timezone 'HKT-8'
+  option zonename 'Asia/Hong_Kong'
+  option ttylogin '0'
+  option log_proto 'stderr'
+  option conloglevel '8'
+  option cronloglevel '5'
+EOF
 
 # ------------------------------------------------------------
-# Firewall / nftables stack (fw4)
+# 2) SSH login banner
 # ------------------------------------------------------------
-CONFIG_PACKAGE_iptables-nft=y
+cat > "${FILES_DIR}/etc/banner" <<'EOF'
+---------------------------------------------------------------
+ _   _                           _  _   _  ____  _____
+| | | | __ _ _ __ _ __ _   _    | || | | ||  _ \|_   _|
+| |_| |/ _` | '__| '__| | | |   | || |_| || |_) | | |
+|  _  | (_| | |  | |  | |_| |   |__   _  ||  _ <  | |
+|_| |_|\__,_|_|  |_|   \__, |      |_| |_||_| \_\ |_|
+                       |___/
+---------------------------------------------------------------
+ HarryWrt 24.10.5 | Clean Edition | Stable Base
+ Based on OpenWrt | No Bloatware | Performance Focused
+---------------------------------------------------------------
+EOF
 
 # ------------------------------------------------------------
-# DNS Services (Prefer dnsmasq-full)
+# 3) MOTD (post-login message)
 # ------------------------------------------------------------
-CONFIG_PACKAGE_dnsmasq-full=y
-# CONFIG_PACKAGE_dnsmasq is not set
+cat > "${FILES_DIR}/etc/motd" <<'EOF'
+HarryWrt 24.10.5 - Clean Edition (based on OpenWrt)
+EOF
 
 # ------------------------------------------------------------
-# Kernel: Modern nftables & TProxy base (proxy-friendly)
+# 4) UCI defaults: Branding + release description
+#    (best-effort; won't break if file format differs)
 # ------------------------------------------------------------
-CONFIG_PACKAGE_kmod-tun=y
-CONFIG_PACKAGE_kmod-br-netfilter=y
-CONFIG_PACKAGE_kmod-nft-socket=y
-CONFIG_PACKAGE_kmod-nft-compat=y
-CONFIG_PACKAGE_kmod-nft-tproxy=y
+cat > "${FILES_DIR}/etc/uci-defaults/10-harrywrt-branding" <<'EOF'
+#!/bin/sh
+set -eu
+
+DESC="HarryWrt 24.10.5 Clean (based on OpenWrt)"
+
+# Update release descriptions (best-effort)
+if [ -f /etc/openwrt_release ]; then
+  sed -i "s/^DISTRIB_DESCRIPTION=.*/DISTRIB_DESCRIPTION='${DESC}'/" /etc/openwrt_release 2>/dev/null || true
+fi
+
+if [ -f /etc/os-release ]; then
+  sed -i "s/^PRETTY_NAME=.*/PRETTY_NAME=\"${DESC}\"/" /etc/os-release 2>/dev/null || true
+fi
+
+if [ -f /usr/lib/os-release ]; then
+  sed -i "s/^PRETTY_NAME=.*/PRETTY_NAME=\"${DESC}\"/" /usr/lib/os-release 2>/dev/null || true
+fi
+
+exit 0
+EOF
+chmod 0755 "${FILES_DIR}/etc/uci-defaults/10-harrywrt-branding"
 
 # ------------------------------------------------------------
-# Kernel: iptables compatibility (legacy scripts)
+# 5) Force LuCI default theme to Bootstrap (stock-like)
+#    Use 99 to ensure it runs last.
+#    Argon can still be selected manually later.
 # ------------------------------------------------------------
-CONFIG_PACKAGE_kmod-ipt-core=y
-CONFIG_PACKAGE_kmod-ipt-nat=y
-CONFIG_PACKAGE_kmod-ipt-tproxy=y
+cat > "${FILES_DIR}/etc/uci-defaults/99-force-default-theme" <<'EOF'
+#!/bin/sh
+set -eu
 
-# ------------------------------------------------------------
-# Passwall2 Offline Installation "Must-Haves"
-# (So luci-app-passwall2.ipk can be uploaded & installed offline)
-# ------------------------------------------------------------
-CONFIG_PACKAGE_tcping=y
-CONFIG_PACKAGE_geoview=y
-CONFIG_PACKAGE_v2ray-geoip=y
-CONFIG_PACKAGE_v2ray-geosite=y
+if command -v uci >/dev/null 2>&1; then
+  uci -q set luci.main.mediaurlbase='/luci-static/bootstrap' || true
+  uci -q commit luci || true
+fi
 
-# ------------------------------------------------------------
-# Passwall2 Runtime Dependencies (Offline-friendly base)
-# ------------------------------------------------------------
-CONFIG_PACKAGE_libev=y
-CONFIG_PACKAGE_libsodium=y
-CONFIG_PACKAGE_libudns=y
+exit 0
+EOF
+chmod 0755 "${FILES_DIR}/etc/uci-defaults/99-force-default-theme"
 
-CONFIG_PACKAGE_kmod-inet-diag=y
-CONFIG_PACKAGE_kmod-netlink-diag=y
-
-CONFIG_PACKAGE_coreutils=y
-CONFIG_PACKAGE_coreutils-base64=y
-CONFIG_PACKAGE_coreutils-nohup=y
-CONFIG_PACKAGE_libuci-lua=y
-
-# Common engines (optional but recommended)
-CONFIG_PACKAGE_xray-core=y
-CONFIG_PACKAGE_sing-box=y
+echo "DIY script executed successfully."
