--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -11,8 +11,7 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-ssl=y
 CONFIG_PACKAGE_luci-compat=y
-
-# Argon included as an option (default theme will be forced to bootstrap via uci-defaults)
+CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-argon=y
 
 # ------------------------------------------------------------
@@ -41,15 +40,15 @@ CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_resolveip=y
 
 # ------------------------------------------------------------
+# Firewall / nftables stack (fw4)
+# ------------------------------------------------------------
+CONFIG_PACKAGE_iptables-nft=y
+
+# ------------------------------------------------------------
 # DNS Services (Prefer dnsmasq-full)
 # ------------------------------------------------------------
 CONFIG_PACKAGE_dnsmasq-full=y
 # CONFIG_PACKAGE_dnsmasq is not set
-
-# ------------------------------------------------------------
-# Firewall / nftables stack (fw4)
-# ------------------------------------------------------------
-CONFIG_PACKAGE_iptables-nft=y
 
 # ------------------------------------------------------------
 # Kernel: Modern nftables & TProxy base (proxy-friendly)
@@ -68,29 +67,29 @@ CONFIG_PACKAGE_kmod-ipt-nat=y
 CONFIG_PACKAGE_kmod-ipt-tproxy=y
 
 # ------------------------------------------------------------
-# Passwall2 Offline Installation Must-Haves
-# (So local upload install of luci-app-passwall2.ipk won't fail)
+# Passwall2 Offline Installation "Must-Haves"
+# (So luci-app-passwall2.ipk can be uploaded & installed offline)
 # ------------------------------------------------------------
-# Required by luci-app-passwall2 deps:
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_geoview=y
 CONFIG_PACKAGE_v2ray-geoip=y
 CONFIG_PACKAGE_v2ray-geosite=y
 
-# Runtime libs frequently needed by proxy components:
+# ------------------------------------------------------------
+# Passwall2 Runtime Dependencies (Offline-friendly base)
+# ------------------------------------------------------------
 CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libsodium=y
 CONFIG_PACKAGE_libudns=y
 
-# Kernel diag modules (required by sing-box and some proxy stacks):
 CONFIG_PACKAGE_kmod-inet-diag=y
 CONFIG_PACKAGE_kmod-netlink-diag=y
 
-# Utilities pulled by luci-app-passwall2 on install (avoid online fetch):
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_libuci-lua=y
 
-# NOTE:
-# Do NOT force ipset / kmod-ipt-ipset here (24.10.x official repo may not provide a compatible chain).
+# Common engines (optional but recommended)
+CONFIG_PACKAGE_xray-core=y
+CONFIG_PACKAGE_sing-box=y
