--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -24,6 +24,9 @@ CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_libstdcpp=y
 
+# Better process tools (clean but more reliable for troubleshooting)
+CONFIG_PACKAGE_procps-ng-ps=y
+
 # ------------------------------------------------------------
 # Base security
 # ------------------------------------------------------------
@@ -44,6 +47,10 @@ CONFIG_PACKAGE_resolveip=y
 # ------------------------------------------------------------
 CONFIG_PACKAGE_iptables-nft=y
 
+# Compatibility: some LuCI apps / scripts still check iptables binaries
+CONFIG_PACKAGE_iptables=y
+CONFIG_PACKAGE_ip6tables=y
+
 # ------------------------------------------------------------
 # DNS Services (Prefer dnsmasq-full)
 # ------------------------------------------------------------
@@ -59,6 +66,9 @@ CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-nft-tproxy=y
 
+# Ensure module loader exists (stable, tiny, helps runtime guard scripts)
+CONFIG_PACKAGE_kmodloader=y
+
 # ------------------------------------------------------------
 # Kernel: iptables compatibility (legacy scripts)
 # ------------------------------------------------------------
@@ -67,7 +77,7 @@ CONFIG_PACKAGE_kmod-ipt-nat=y
 CONFIG_PACKAGE_kmod-ipt-tproxy=y
 
 # ------------------------------------------------------------
-# Passwall2 Offline Installation "Must-Haves"
+# Offline Installation "Must-Haves"
 # (So luci-app-passwall2.ipk can be uploaded & installed offline)
 # ------------------------------------------------------------
 CONFIG_PACKAGE_tcping=y
@@ -76,7 +86,7 @@ CONFIG_PACKAGE_v2ray-geoip=y
 CONFIG_PACKAGE_v2ray-geosite=y
 
 # ------------------------------------------------------------
-# Passwall2 Runtime Dependencies (Offline-friendly base)
+# Runtime Dependencies (Offline-friendly base)
 # ------------------------------------------------------------
 CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libsodium=y
