--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,91 +42,53 @@ jobs:
             [[ -n "$rel" ]] || rel="v1.0"
           fi
           echo "release=$rel" >> "$GITHUB_OUTPUT"
-          echo "Release: $rel"
 
       - name: Free disk space and enable swap
-        shell: bash
         run: |
-          set -euo pipefail
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/powershell || true
-          df -h
-
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc || true
           SWAP_PATH="/mnt/gh-swapfile"
-          sudo swapoff "$SWAP_PATH" 2>/dev/null || true
-          sudo rm -f "$SWAP_PATH" || true
-
-          if ! sudo fallocate -l 8G "$SWAP_PATH" 2>/dev/null; then
-            sudo dd if=/dev/zero of="$SWAP_PATH" bs=1M count=8192 status=progress
-          fi
-
+          sudo fallocate -l 8G "$SWAP_PATH" || sudo dd if=/dev/zero of="$SWAP_PATH" bs=1M count=8192
           sudo chmod 600 "$SWAP_PATH"
           sudo mkswap "$SWAP_PATH"
           sudo swapon "$SWAP_PATH"
-          sudo swapon --show
-          free -h
 
       - name: Install build dependencies
-        shell: bash
         run: |
-          set -euo pipefail
           sudo apt-get update
-          sudo apt-get install -y --no-install-recommends \
-            build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
-            gettext git libncurses-dev libssl-dev rsync unzip zlib1g-dev \
-            file wget curl ca-certificates time \
-            python3 python3-distutils python3-setuptools python3-pyelftools \
-            gperf swig subversion mercurial
-          git --version
-          python3 --version
+          sudo apt-get install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
+            gettext git libncurses-dev libssl-dev rsync unzip zlib1g-dev file wget curl python3-pyelftools
 
       - name: Clone OpenWrt source
-        shell: bash
         run: |
-          set -euo pipefail
           git clone --depth=1 --branch "${OWRT_TAG}" "${OWRT_REPO}" openwrt
-          : > openwrt/build.log
-
-      - name: Add extra feeds (compat packages)
-        shell: bash
-        run: |
-          set -euo pipefail
-          cd openwrt
-          # Extra packages feed used to build some optional/third-party components offline (no runtime requirement)
-          echo "src-git passwall_packages https://github.com/Openwrt-Passwall/openwrt-passwall-packages.git;main" >> feeds.conf.default
-
-      - name: Add extra packages (Argon theme sources)
-        shell: bash
-        run: |
-          set -euo pipefail
-          cd openwrt
-
-          mkdir -p package/extra
-          rm -rf package/extra/luci-theme-argon || true
-          git clone --depth=1 https://github.com/jerrykuku/luci-theme-argon.git package/extra/luci-theme-argon 2>&1 | tee -a build.log
+          touch openwrt/build.log
 
       - name: Update and install feeds
-        shell: bash
         run: |
-          set -euo pipefail
           cd openwrt
-          ./scripts/feeds update -a 2>&1 | tee -a build.log
-          ./scripts/feeds install -a -f 2>&1 | tee -a build.log
+          echo "src-git passwall_packages https://github.com/Openwrt-Passwall/openwrt-passwall-packages.git;main" >> feeds.conf.default
+          mkdir -p package/extra
+          git clone --depth=1 https://github.com/jerrykuku/luci-theme-argon.git package/extra/luci-theme-argon
+          ./scripts/feeds update -a
+          ./scripts/feeds install -a -f
 
       - name: Apply config and run DIY
         shell: bash
         run: |
           set -euo pipefail
           cd openwrt
-
           cp "${GITHUB_WORKSPACE}/configs/x86_64-clean.config" .config
-
           chmod +x "${GITHUB_WORKSPACE}/scripts/diy.sh"
-          bash "${GITHUB_WORKSPACE}/scripts/diy.sh" 2>&1 | tee -a build.log
+          bash "${GITHUB_WORKSPACE}/scripts/diy.sh"
+          
+          # 關鍵修正：在 defconfig 抹除配置後再次強行寫入
+          make defconfig
+          echo "CONFIG_PACKAGE_iptables=y" >> .config
+          echo "CONFIG_PACKAGE_ip6tables=y" >> .config
+          echo "CONFIG_PACKAGE_procps-ng-ps=y" >> .config
+          make defconfig
 
-          make defconfig 2>&1 | tee -a build.log
-
-          echo "Checking important packages in final .config..." | tee -a build.log
-
+          echo "Checking important packages in final .config..."
           MUST_Y=(
             "CONFIG_PACKAGE_dnsmasq-full"
             "CONFIG_PACKAGE_iptables-nft"
@@ -153,117 +115,44 @@ jobs:
             "CONFIG_PACKAGE_xray-core"
             "CONFIG_PACKAGE_sing-box"
           )
-
-          OPTIONAL_Y=(
-            "CONFIG_PACKAGE_luci-theme-argon"
-          )
-
           missing=0
           for k in "${MUST_Y[@]}"; do
             if grep -qE "^${k}=y$" .config; then
-              echo "OK: ${k}=y" | tee -a build.log
+              echo "OK: ${k}=y"
             else
-              echo "MISSING: ${k}=y" | tee -a build.log
+              echo "MISSING: ${k}=y"
               missing=1
             fi
           done
-
-          for k in "${OPTIONAL_Y[@]}"; do
-            if grep -qE "^${k}=y$" .config; then
-              echo "OK: ${k}=y (optional)" | tee -a build.log
-            else
-              echo "NOTE: ${k} is not enabled (optional)" | tee -a build.log
-            fi
-          done
-
-          if [[ "$missing" -ne 0 ]]; then
-            echo "ERROR: One or more required packages are not enabled in final .config." | tee -a build.log
-            exit 1
-          fi
+          if [[ "$missing" -ne 0 ]]; then exit 1; fi
 
       - name: Download sources
-        shell: bash
-        run: |
-          set -euo pipefail
-          cd openwrt
-          make download -j"$(nproc)" 2>&1 | tee -a build.log
+        run: cd openwrt && make download -j"$(nproc)"
 
       - name: Build firmware
-        shell: bash
-        run: |
-          set -euo pipefail
-          cd openwrt
-          make -j"$(nproc)" 2>&1 | tee -a build.log || make -j1 V=s 2>&1 | tee -a build.log
+        run: cd openwrt && make -j"$(nproc)" || make -j1 V=s
 
-      - name: Organize and rename files (HarryWrt naming)
-        shell: bash
+      - name: Organize and rename files
         run: |
-          set -euo pipefail
           cd openwrt/bin/targets/x86/64
-
           REL="${{ steps.meta.outputs.release }}"
           PREFIX="HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${REL}-${{ env.TARGET }}"
-
-          BIOS_SQ="$(ls -1 *squashfs-combined.img.gz | head -n 1)"
-          UEFI_SQ="$(ls -1 *squashfs-combined-efi.img.gz | head -n 1)"
-          BIOS_E4="$(ls -1 *ext4-combined.img.gz | head -n 1)"
-          UEFI_E4="$(ls -1 *ext4-combined-efi.img.gz | head -n 1)"
-
-          cp -f "$BIOS_SQ" "${PREFIX}-squashfs-bios.img.gz"
-          cp -f "$UEFI_SQ" "${PREFIX}-squashfs-uefi.img.gz"
-          cp -f "$BIOS_E4" "${PREFIX}-ext4-bios.img.gz"
-          cp -f "$UEFI_E4" "${PREFIX}-ext4-uefi.img.gz"
-
+          cp -f "$(ls -1 *squashfs-combined-efi.img.gz | head -n 1)" "${PREFIX}-uefi.img.gz"
           sha256sum ${PREFIX}-*.img.gz > SHA256SUMS
 
-          echo "Output files:"
-          ls -lah ${PREFIX}-*.img.gz SHA256SUMS
-
-      - name: Upload build log artifact
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: Log-clean-${{ steps.meta.outputs.release }}
-          path: openwrt/build.log
-
       - name: Upload firmware artifacts
-        if: success()
         uses: actions/upload-artifact@v4
         with:
-          name: HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${{ steps.meta.outputs.release }}-${{ env.TARGET }}
-          path: |
-            openwrt/bin/targets/x86/64/HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${{ steps.meta.outputs.release }}-${{ env.TARGET }}-*.img.gz
-            openwrt/bin/targets/x86/64/SHA256SUMS
+          name: HarryWrt-Firmware
+          path: openwrt/bin/targets/x86/64/HarryWrt-*.img.gz
 
-      - name: Publish GitHub Release (tag builds only)
+      - name: Publish GitHub Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
-          name: HarryWrt Clean 24.10.5 ${{ steps.meta.outputs.release }} - x86_64
-          body: |
-            Base: OpenWrt 24.10.5 (x86_64)
-            Profile: Clean Edition
-
-            Notes:
-            - Argon theme is included but the default UI remains Bootstrap (stock-like).
-            - Built with a stable, minimal baseline and a compatibility-friendly package set for offline/limited environments.
-
-            Recommended:
-            - squashfs-uefi for UEFI systems
-            - squashfs-bios for legacy BIOS systems
-
-            Default:
-            - Hostname: HarryWrt
-            - Timezone: Asia/Hong_Kong
-
-            Rootfs:
-            - 1024MB (1GB)
-
-            Integrity:
-            - SHA256SUMS is attached to this release
+          name: HarryWrt ${{ steps.meta.outputs.release }}
           files: |
-            openwrt/bin/targets/x86/64/HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${{ steps.meta.outputs.release }}-${{ env.TARGET }}-*.img.gz
+            openwrt/bin/targets/x86/64/HarryWrt-*.img.gz
             openwrt/bin/targets/x86/64/SHA256SUMS
-            openwrt/build.log
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
