--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -1,3 +1,7 @@
+# =========================
+# File 1: configs/x86_64-clean.config
+# =========================
+
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
@@ -23,19 +27,14 @@ CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_libstdcpp=y
-
-# Better process tools (clean but more reliable for troubleshooting)
 CONFIG_PACKAGE_procps-ng-ps=y
 
 # ------------------------------------------------------------
-# Base security
+# Base security & Network
 # ------------------------------------------------------------
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_openssl-util=y
 
-# ------------------------------------------------------------
-# Network utilities
-# ------------------------------------------------------------
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_tcpdump=y
@@ -47,38 +46,35 @@ CONFIG_PACKAGE_resolveip=y
 # ------------------------------------------------------------
 CONFIG_PACKAGE_iptables-nft=y
 
-# Compatibility: some LuCI apps / scripts still check iptables binaries
+# Compatibility: some scripts still check iptables binaries
 CONFIG_PACKAGE_iptables=y
 CONFIG_PACKAGE_ip6tables=y
 
 # ------------------------------------------------------------
-# DNS Services (Prefer dnsmasq-full)
+# DNS Services
 # ------------------------------------------------------------
 CONFIG_PACKAGE_dnsmasq-full=y
 # CONFIG_PACKAGE_dnsmasq is not set
 
 # ------------------------------------------------------------
-# Kernel: Modern nftables & TProxy base (proxy-friendly)
+# Kernel: TProxy & nftables base
 # ------------------------------------------------------------
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-br-netfilter=y
 CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-nft-tproxy=y
-
-# Ensure module loader exists (stable, tiny, helps runtime guard scripts)
 CONFIG_PACKAGE_kmodloader=y
 
 # ------------------------------------------------------------
-# Kernel: iptables compatibility (legacy scripts)
+# Kernel: iptables compatibility
 # ------------------------------------------------------------
 CONFIG_PACKAGE_kmod-ipt-core=y
 CONFIG_PACKAGE_kmod-ipt-nat=y
 CONFIG_PACKAGE_kmod-ipt-tproxy=y
 
 # ------------------------------------------------------------
-# Offline Installation "Must-Haves"
-# (So luci-app-passwall2.ipk can be uploaded & installed offline)
+# Offline-friendly base (general compatibility)
 # ------------------------------------------------------------
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_geoview=y
@@ -86,7 +82,7 @@ CONFIG_PACKAGE_v2ray-geoip=y
 CONFIG_PACKAGE_v2ray-geosite=y
 
 # ------------------------------------------------------------
-# Runtime Dependencies (Offline-friendly base)
+# Runtime Dependencies
 # ------------------------------------------------------------
 CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libsodium=y
@@ -100,6 +96,13 @@ CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_libuci-lua=y
 
-# Common engines (optional but recommended)
+# Core Engines (optional but recommended)
 CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_sing-box=y
+
+
+# =========================
+# File 2: scripts/diy.sh
+# =========================
+#!/usr/bin/env bash
+set -euo pipefail
