--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -1,7 +1,3 @@
-# =========================
-# File 1: configs/x86_64-clean.config
-# =========================
-
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
@@ -34,7 +30,6 @@ CONFIG_PACKAGE_procps-ng-ps=y
 # ------------------------------------------------------------
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_openssl-util=y
-
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_tcpdump=y
@@ -46,7 +41,7 @@ CONFIG_PACKAGE_resolveip=y
 # ------------------------------------------------------------
 CONFIG_PACKAGE_iptables-nft=y
 
-# Compatibility: some scripts still check iptables binaries
+# Compatibility: some LuCI apps / scripts still check iptables binaries
 CONFIG_PACKAGE_iptables=y
 CONFIG_PACKAGE_ip6tables=y
 
@@ -74,7 +69,7 @@ CONFIG_PACKAGE_kmod-ipt-nat=y
 CONFIG_PACKAGE_kmod-ipt-tproxy=y
 
 # ------------------------------------------------------------
-# Offline-friendly base (general compatibility)
+# Offline Installation "Must-Haves"
 # ------------------------------------------------------------
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_geoview=y
@@ -87,22 +82,13 @@ CONFIG_PACKAGE_v2ray-geosite=y
 CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libsodium=y
 CONFIG_PACKAGE_libudns=y
-
 CONFIG_PACKAGE_kmod-inet-diag=y
 CONFIG_PACKAGE_kmod-netlink-diag=y
-
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_libuci-lua=y
 
-# Core Engines (optional but recommended)
+# Core Engines
 CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_sing-box=y
-
-
-# =========================
-# File 2: scripts/diy.sh
-# =========================
-#!/usr/bin/env bash
-set -euo pipefail
