--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -23,13 +23,19 @@ CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_libstdcpp=y
+
+# Better process tools (for troubleshooting)
 CONFIG_PACKAGE_procps-ng-ps=y
 
 # ------------------------------------------------------------
-# Base security & Network
+# Base security
 # ------------------------------------------------------------
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_openssl-util=y
+
+# ------------------------------------------------------------
+# Network utilities
+# ------------------------------------------------------------
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_tcpdump=y
@@ -41,28 +47,30 @@ CONFIG_PACKAGE_resolveip=y
 # ------------------------------------------------------------
 CONFIG_PACKAGE_iptables-nft=y
 
-# Compatibility: some LuCI apps / scripts still check iptables binaries
+# Compatibility: some scripts/LuCI apps still check iptables binaries
 CONFIG_PACKAGE_iptables=y
 CONFIG_PACKAGE_ip6tables=y
 
 # ------------------------------------------------------------
-# DNS Services
+# DNS Services (Prefer dnsmasq-full)
 # ------------------------------------------------------------
 CONFIG_PACKAGE_dnsmasq-full=y
 # CONFIG_PACKAGE_dnsmasq is not set
 
 # ------------------------------------------------------------
-# Kernel: TProxy & nftables base
+# Kernel: Modern nftables & TProxy base (proxy-friendly)
 # ------------------------------------------------------------
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-br-netfilter=y
 CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-nft-tproxy=y
+
+# Ensure module loader exists (tiny but useful)
 CONFIG_PACKAGE_kmodloader=y
 
 # ------------------------------------------------------------
-# Kernel: iptables compatibility
+# Kernel: iptables compatibility (legacy scripts)
 # ------------------------------------------------------------
 CONFIG_PACKAGE_kmod-ipt-core=y
 CONFIG_PACKAGE_kmod-ipt-nat=y
@@ -70,6 +78,7 @@ CONFIG_PACKAGE_kmod-ipt-tproxy=y
 
 # ------------------------------------------------------------
 # Offline Installation "Must-Haves"
+# (So luci-app-passwall2.ipk can be uploaded & installed offline)
 # ------------------------------------------------------------
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_geoview=y
@@ -77,13 +86,15 @@ CONFIG_PACKAGE_v2ray-geoip=y
 CONFIG_PACKAGE_v2ray-geosite=y
 
 # ------------------------------------------------------------
-# Runtime Dependencies
+# Runtime Dependencies (Offline-friendly base)
 # ------------------------------------------------------------
 CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libsodium=y
 CONFIG_PACKAGE_libudns=y
+
 CONFIG_PACKAGE_kmod-inet-diag=y
 CONFIG_PACKAGE_kmod-netlink-diag=y
+
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-nohup=y
