--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,17 +48,20 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/powershell || true
+          sudo rm -rf \
+            /usr/share/dotnet \
+            /usr/local/lib/android \
+            /opt/ghc \
+            /usr/local/share/powershell \
+            /usr/share/swift \
+            /usr/local/share/boost || true
+          sudo apt-get clean || true
           df -h
 
           SWAP_PATH="/mnt/gh-swapfile"
           sudo swapoff "$SWAP_PATH" 2>/dev/null || true
           sudo rm -f "$SWAP_PATH" || true
-
-          if ! sudo fallocate -l 8G "$SWAP_PATH" 2>/dev/null; then
-            sudo dd if=/dev/zero of="$SWAP_PATH" bs=1M count=8192 status=progress
-          fi
-
+          sudo fallocate -l 8G "$SWAP_PATH" 2>/dev/null || sudo dd if=/dev/zero of="$SWAP_PATH" bs=1M count=8192 status=progress
           sudo chmod 600 "$SWAP_PATH"
           sudo mkswap "$SWAP_PATH"
           sudo swapon "$SWAP_PATH"
@@ -86,14 +89,14 @@ jobs:
           git clone --depth=1 --branch "${OWRT_TAG}" "${OWRT_REPO}" openwrt
           : > openwrt/build.log
 
-      - name: Add Passwall packages feed
+      - name: Add Passwall packages feed (offline deps)
         shell: bash
         run: |
           set -euo pipefail
           cd openwrt
           echo "src-git passwall_packages https://github.com/Openwrt-Passwall/openwrt-passwall-packages.git;main" >> feeds.conf.default
 
-      - name: Add extra packages (Argon theme source)
+      - name: Add extra packages (Argon theme)
         shell: bash
         run: |
           set -euo pipefail
@@ -116,18 +119,21 @@ jobs:
           set -euo pipefail
           cd openwrt
 
-          # 1) Load base config
           cp "${GITHUB_WORKSPACE}/configs/x86_64-clean.config" .config
-          sed -i 's/\r$//' .config
 
-          # 2) Run DIY
+          # Enforce dnsmasq-full selection
+          sed -i '/^CONFIG_PACKAGE_dnsmasq-full=/d' .config
+          sed -i '/^CONFIG_PACKAGE_dnsmasq=/d' .config
+          sed -i '/^# CONFIG_PACKAGE_dnsmasq is not set/d' .config
+          echo "CONFIG_PACKAGE_dnsmasq-full=y" >> .config
+          echo "# CONFIG_PACKAGE_dnsmasq is not set" >> .config
+
           chmod +x "${GITHUB_WORKSPACE}/scripts/diy.sh"
           bash "${GITHUB_WORKSPACE}/scripts/diy.sh" 2>&1 | tee -a build.log
 
-          # 3) First defconfig (OpenWrt may prune some items)
           make defconfig 2>&1 | tee -a build.log
 
-          # 4) Ticket required packages back in (format-safe)
+          # Defensive keepers after defconfig trim
           EXTRA_PKGS=(
             "CONFIG_PACKAGE_iptables"
             "CONFIG_PACKAGE_ip6tables"
@@ -135,14 +141,13 @@ jobs:
             "CONFIG_PACKAGE_kmodloader"
           )
           for pkg in "${EXTRA_PKGS[@]}"; do
-            sed -i 's/\r$//' .config
             sed -i "/^${pkg}=.*/d" .config
-            sed -i "/^[# ]*${pkg} is not set$/d" .config
-            printf "\n%s=y\n" "${pkg}" >> .config
+            sed -i "/^# ${pkg} is not set/d" .config
+            echo "${pkg}=y" >> .config
           done
 
-          # 5) QA checks (do not run defconfig again)
           echo "Checking important packages in final .config..." | tee -a build.log
+
           MUST_Y=(
             "CONFIG_PACKAGE_dnsmasq-full"
             "CONFIG_PACKAGE_iptables-nft"
@@ -171,6 +176,10 @@ jobs:
             "CONFIG_PACKAGE_kmodloader"
           )
 
+          OPTIONAL_Y=(
+            "CONFIG_PACKAGE_luci-theme-argon"
+          )
+
           missing=0
           for k in "${MUST_Y[@]}"; do
             if grep -qE "^${k}=y$" .config; then
@@ -178,6 +187,14 @@ jobs:
             else
               echo "MISSING: ${k}=y" | tee -a build.log
               missing=1
+            fi
+          done
+
+          for k in "${OPTIONAL_Y[@]}"; do
+            if grep -qE "^${k}=y$" .config; then
+              echo "OK: ${k}=y (optional)" | tee -a build.log
+            else
+              echo "NOTE: ${k} is not enabled (optional)" | tee -a build.log
             fi
           done
 
@@ -200,7 +217,7 @@ jobs:
           cd openwrt
           make -j"$(nproc)" 2>&1 | tee -a build.log || make -j1 V=s 2>&1 | tee -a build.log
 
-      - name: Organize and rename files
+      - name: Organize and rename files (HarryWrt naming)
         shell: bash
         run: |
           set -euo pipefail
@@ -248,6 +265,24 @@ jobs:
           body: |
             Base: OpenWrt 24.10.5 (x86_64)
             Profile: Clean Edition
+
+            Notes:
+            - Argon theme is included but the default UI remains Bootstrap (stock-like).
+            - Offline-ready runtime environment includes common engines and GeoData packages.
+
+            Recommended:
+            - squashfs-uefi for UEFI systems
+            - squashfs-bios for legacy BIOS systems
+
+            Default:
+            - Hostname: HarryWrt
+            - Timezone: Asia/Hong_Kong
+
+            Rootfs:
+            - 1024MB (1GB)
+
+            Integrity:
+            - SHA256SUMS is attached to this release
           files: |
             openwrt/bin/targets/x86/64/HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${{ steps.meta.outputs.release }}-${{ env.TARGET }}-*.img.gz
             openwrt/bin/targets/x86/64/SHA256SUMS
