--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -18,6 +18,8 @@ CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_libstdcpp=y
 
+# procps-ng split packages must be enabled together
+CONFIG_PACKAGE_procps-ng=y
 CONFIG_PACKAGE_procps-ng-ps=y
 
 CONFIG_PACKAGE_ca-bundle=y
